# noyau-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  LINKS.md  README.md  SPECS.md  VISUAL_IDENTITY.md  config.yml  create_session_browser.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_token_tracking.py  003_add_videos_table.py  004_add_job_runs_table.py  005_add_first_published_at.py  006_add_user_is_subscribed.py  007_change_author_to_text.py  008_add_messaging_connections.py  009_add_digest_deliveries_table.py  010_add_podcast_to_issues.py  f58b43023b1d_add_bluesky_to_contentsource_enum.py
app/: __init__.py  cli.py  config.py  dependencies.py  main.py
app/api/: auth.py  dispatch.py  events.py  issues.py  jobs.py  podcast.py  router.py  slack.py  users.py
app/core/: database.py  datetime_utils.py  logging.py  rate_limit.py  retry.py  scheduler.py  security.py
app/emails/: __init__.py
app/ingest/: __init__.py  base.py  bluesky.py  devto.py  nitter.py  nitter_auth.py  normalizer.py  orchestrator.py  reddit.py  rss.py  youtube.py
app/jobs/: __init__.py  daily.py  discord_bot.py  dispatch.py  hourly.py  ingest.py  podcast_generate.py  utils.py  video_dispatch.py  video_generate.py
app/metrics/: engagement.py
app/models/: __init__.py  base.py  cluster.py  content.py  digest_delivery.py  event.py  issue.py  job_run.py  messaging.py  user.py  video.py
app/pipeline/: __init__.py  clustering.py  distiller.py  (+4 more)
docs/: API.md  ARCHITECTURE.md  DISCORD.md  PROCESS.md  PRODUCTION_CHECKLIST.md  SLACK.md  TRACKING.md
nitter/: README.md  nitter.conf  sessions.jsonl.example
scripts/: refresh_nitter_tokens.sh  test_tiktok_upload.py  youtube_oauth.py
seeds/: seed_data.sql
terraform/: cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
ui/: Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.mjs
(+118 files in other folders)
